update bio and fix align vertical center

--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -42,11 +42,17 @@
   --global-danger-block-text: #600;
   --global-danger-block-title: #c00;
 
-  .profile-container {
+  .post {
     display: flex;
-    flex-direction: column; /* Align items vertically */
-    justify-content: center; /* Center vertically */
-    height: 100%; /* Ensure div takes up the full height */
+    flex-direction: column;
+    justify-content: center; /* Centers content vertically */
+    align-items: center;     /* Optional: centers content horizontally */
+    height: 100vh;           /* Full viewport height */
+    text-align: center;      /* Optional: centers text in the children */
+  }
+  
+  .post-header, article {
+    width: 100%;             /* Make sure the children take up full width */
   }
 
   #light-toggle-system {
